# VirtualNeRFExplorer

./: .gitignore  README.md  pyproject.toml
src/virtual_nerf_explorer/: __init__.py  __main__.py  app.py  camera.py  capture.py  config.py  loader.py  render.py  session.py  state.py
src/virtual_nerf_explorer/viewer/: __init__.py  explorer.py  gui.py  scene.py
